# ray-tracing-engine

./: CMakeLists.txt  README.md
.github/workflows/: cmake-and-ctest.yml  cmake-single-platform.yml
benchmark/: benchmark_main.cpp
include/: color3.h  point3.h  vec3.h
rte_benchmark/: rte_benchmark_main.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  color_class_tests.cpp  point_class_tests.cpp  run_tests.cpp
